tests/e2e/not_allowed/inf.error
Error: syntax error in story at line 1, column 5

1|    a = inf
          ^^^

E0030: `inf` is reserved for future use
